# sprintlm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config.yaml  prepare_hf.yaml  prepare_tinystories.yaml
configs/dataset/: local.yaml
configs/model/: small.yaml
configs/train/: micro.yaml
docs/: index.html
src/sprintlm/: utils.py
src/sprintlm/data/: batch.py  memmap.py
src/sprintlm/model/: attention.py  block.py  embedding.py  ffn.py  linear.py  optimizer.py  rmsnorm.py  rope.py  transformer.py
src/sprintlm/nn/: functional.py
src/sprintlm/tokenization/: tokenizer.py
src/sprintlm/train/: decode.py  train.py
tests/: test_layers.py  test_tokenizer.py
tools/: decode_cli.py  plot_metrics.py  prepare_hf.py  prepare_split.py
